# defi-vuln-benchmark

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
data/: cases.jsonl
scripts/: 1_add_cases_from_defihacklabs.py  2_prefetch_sources.py  3_enrich_cases.py  README.md
src/: config.py  etherscan.py  evaluation.py  foundry.py  pipeline.py
src/agents/: __init__.py  base.py
src/agents/baseline/: __init__.py  agent.py  prompts.py
